<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24dp"
        android:elevation="8dp"
        android:background="@android:color/white"
        android:text="@string/register_title" />

    <ImageView
        android:id="@+id/imv_fotoRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:minHeight="150dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/nombre_completo_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtNombreCompletoRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="40dp"
            android:text="NOMBRE APELLIDO" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/email_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtEmailRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="40dp"
            android:text="CORREO ELECTRONICO" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/telefono_contacto_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPhoneRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="Teléfono de emergencia"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/tipo_usuario_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinerTipoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>
        <TextView
            android:id="@+id/tokenViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/token_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/token_input_text"
            android:inputType="textPersonName"
            android:textColor="#000000" />

    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="registrar"
        android:text="@string/registrar_usuario" />

</LinearLayout>