<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrimeInfoActivity" >

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24dp"
        android:elevation="8dp"
        android:background="@android:color/white"
        android:text="@string/crime_detail" />

    <ImageView
        android:id="@+id/imv_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="150dp"
        android:minHeight="150dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/victim_name"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVictimName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:paddingStart="40dp"
            android:text="NOMBRE APELLIDO" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/victim_email"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVictimEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="40dp"
            android:text="CORREO ELECTRONICO" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/telefono_contacto_text"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVictimPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:paddingStart="40dp"
            android:text="TELEFONO DE EMERGENCIA" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/victim_issue"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVictimIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:paddingStart="40dp"
            android:text="DEMANDA" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingStart="20dp"
            android:text="@string/locate"
            android:textColor="#2196F3"
            android:textSize="18sp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical" />


    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/locate"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:text="@string/locate" />-->



</LinearLayout>