<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UsuarioPackage.ReportFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnGps"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/SelectionGpsEmbed"
            app:backgroundTint="#3DDC84"/>
        <Button
            android:id="@+id/btnIbutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/SelectionIbutton"
            app:backgroundTint="#7F7F7F"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textConectivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingLeft="20sp"
        android:text="No hay conexión a internet"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp">

        <Button
            android:id="@+id/btnReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/reportar"
            app:backgroundTint="#F44336"
            app:elevation="2dp"
            app:iconPadding="0dp" />
    </LinearLayout>

    <!--    <Button-->
<!--        android:id="@+id/button3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:text="REPORTAR" />-->

</LinearLayout>